<resources>
    <string name="app_name">gb-material</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photoBack2">Фото позавчера</string>
    <string name="photoBack1">Фото вчера</string>
    <string name="photoToday">Фото дня</string>
    <string name="reload_msg">Попробовать снова</string>
    <string name="error_server_msg">Ошибка загрузки</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_theme_type_title">Тема оформления</string>
    <string name="settings_type_indigo">Indigo</string>
    <string name="settings_type_pink">Pink</string>
    <string name="settings_button_apply">Применить</string>
    <string name="title_activity_fake">FakeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_msg">Ошибка загрузки</string>
    <string name="pod_description">Picture of the Day</string>
    <string name="photoYesterday">Фото вчера</string>
    <string name="photoBeforeYesterday">Фото позавчера</string>
    <string name="earth_description">Earth photo</string>
    <string name="mars_description">Mars Rover photo</string>
    <string name="settings_action_text">Настройки</string>
    <string name="error_request_msg">Ошибка запроса</string>
    <string name="earth_apply_action">Применить</string>
    <string name="dim">Уменьшить ширину и высоту</string>
    <string name="longitude">Долгота</string>
    <string name="latitude">Широта</string>
    <string name="mars_date_title">Дата планеты</string>

    <string name="nasa_api_key_blank">Требуется ключ API NASA</string>
    <string name="about_action_text">Что такое NASA</string>
    <string name="about_text">
        "The National Aeronautics and Space Administration is America’s civil space program and the "
        "global leader in space exploration. The agency has a diverse workforce of just under 18,000 "
        "civil servants, and works with many more U.S. contractors, academia, and international and "
        "commercial partners to explore, discover, and expand knowledge for the benefit of humanity. "
        "With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the "
        "overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, "
        "generating more than $64.3 billion in total economic output (Fiscal Year 2019).\n\n"

        "At its 20 centers and facilities across the country – and the only National Laboratory in "
        "space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. "
        "We conduct research, testing, and development to advance aeronautics, including electric "
        "propulsion and supersonic flight. We develop and fund space technologies that will enable "
        "future exploration and benefit life on Earth.\n\n"

        "NASA also leads a Moon to Mars exploration approach, which includes working with U.S. "
        "industry, international partners, and academia to develop new technology, and send science "
        "research and soon humans to explore the Moon on Artemis missions that will help prepare "
        "for human exploration of the Red Planet. In addition to those major missions, the agency "
        "shares what it learns so that its information can make life better for people worldwide. "
        "For example, companies use NASA discoveries and technologies to create new products for "
        "the public. To ensure future success for the agency and the nation, NASA also supports "
        "education efforts in STEM with an emphasis on increasing diversity in our future workforce.\n\n"
    </string>
    <string name="text_is_too_long">Слишком много символов</string>

    <string name="notes_action_text">Заметки</string>
    <string name="notes_add_action_text">Add Note</string>
    <string name="notes_edit_action_text">Edit Note</string>
    <string name="notes_delete_action_text">Delete Note</string>
</resources>